--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	
+	  <link rel="icon" type="image/x-icon" href="images/attachment_13386…vebg-preview.ico">
+
+		
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
