--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 	<head>
 
+		
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3EMGEJ0KY8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3EMGEJ0KY8');
+</script>
+		
+		
 		<!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
