--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	  <link rel="icon" type="image/x-icon" href="images/attachment_13386…vebg-preview.ico">
+	  <link rel="icon" type="image/x-icon" href="images/attachment_133869223-removebg-preview.ico">
 
 		
 	<!-- Animate.css -->
