--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<center><img src="image1.png" width="90%"></center><br>
+				<center><img src="image1 (2).png" width="90%"></center><br>
 				<center><img src="image2.png" width="90%"></center><br>
 				<center><img src="image3.png" width="90%"></center>
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading"><br>
