--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			<div class="row">
 				<center><img src="image1 (2).png" width="90%"></center><br>
 				<center><img src="image2 (1).png" width="90%"></center><br>
-				<center><img src="image3.png" width="90%"></center>
+				<center><img src="image3 (1).png" width="90%"></center>
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading"><br>
 					<h2>VÍDEO MOSTRANDO OS RESULTADOS:</h2>
 				</div>
