--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(image1.jpg);"></div>
 							<h1><span>Matheus Oliveira da Mata</span></h1>
-							<h3><span>Especialista em Gestão de Tráfego</span></h3>
+							<h3><span>Especialista em Gestão de Tráfego - Maths Marketing & Gestão</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/mattdamata/"><i class="icon-instagram2"></i></a></li>					
@@ -144,10 +144,16 @@
 				</div>
 			</div>
 			<div class="row">
-				<center><img src="image1 (2).png" width="90%"></center><br>
+				<center><img src="images/unnamed.jpg" width="90%"></center><br>
 				<center><img src="image2 (1).png" width="90%"></center><br>
 				<center><img src="image3 (1).png" width="90%"></center>
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading"><br>
+					
+					<h2>Empresas que ficaram satisfeitas com o serviço prestado:</h2>
+					<center><img src="images/unnamed.jpg" width="90%"></center><br>
+				<center><img src="images/250721457_400459898416411_3135564830756488976_n.jpg" width="90%"></center><br>
+				<center><img src="images/291050414_1099355320676576_3517175107454783446_n.jpg" width="90%"></center>
+					
 					<h2>VÍDEO MOSTRANDO OS RESULTADOS:</h2>
 				</div>
 			</div>
