--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<center><p>&copy; 2022 - Matheus Oliveira da Mata. Todos os Direitos Reservados.</p></center><br>
+					<center><p>&copy; 2022 - Maths Marketing & Gestão. Todos os Direitos Reservados.</p></center><br>
 					<center><p>CNPJ: 45.531.763/0001-05 </p></center>
 				</div>
 			</div>
